--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "phaser": "^3.16.2",
+    "phaser3-rex-plugins": "^1.1.8",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   },
