--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "phaser": "^3.16.2",
     "phaser3-rex-plugins": "^1.1.23",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
